--- a/online-test-front/src/app/app.component.html
+++ b/online-test-front/src/app/app.component.html
@@ -1,8 +1,2 @@
-
-<h1>Welcome to {{title}}</h1>
-<div class="container">
-    <button mat-raised-button>Basic</button>
-    <button mat-raised-button color="primary">Primary</button>
-    <button mat-raised-button color="accent">Accent</button>
-    <button mat-raised-button color="warn">Warn</button>
-</div>
+<online-test-navbar></online-test-navbar>
+<router-outlet></router-outlet>
