--- a/online-test-front/src/app/pages/login/login.component.html
+++ b/online-test-front/src/app/pages/login/login.component.html
@@ -1,1 +1,64 @@
-<p>login works!</p>
+<div class="container">
+  <div class="row">
+    <div class="col-md-6 offset-md-3">
+      <div class="container text-center mt-5">
+        <mat-card>
+          <mat-card-title>
+            <h2 class="text-center ">
+              <img
+                src="../../../assets/logo.png"
+                class="img-fluid rounded"
+                width="60px"
+                alt="Online Test"
+              />
+              Login Here
+            </h2>
+          </mat-card-title>
+
+          <mat-card-content>
+            <form >
+              <mat-form-field appearance="outline" class="w-100">
+                <mat-label> Enter Your Username </mat-label>
+                <input
+                  matInput
+                  placeholder="Username"
+                  type="text"
+                  
+                  name="username"
+                  required
+                />
+              </mat-form-field>
+
+              <mat-form-field appearance="outline" class="w-100">
+                <mat-label> Enter Your Password </mat-label>
+                <input
+                  matInput
+                  placeholder="Password"
+                  type="text"
+                  
+                  name="password"
+                   required
+                />
+              </mat-form-field>
+
+              <div class="container">
+                <button mat-raised-button color="primary" type="submit">
+                  Login
+                </button>
+                <button
+                  mat-raised-button
+                  color="accent"
+                  class="ms-2"
+                  type="reset"
+                >
+                  Clear
+                </button>
+              </div>
+            </form>
+          </mat-card-content>
+        </mat-card>
+      </div>
+    </div>
+  </div>
+</div>
+
