--- a/online-test-front/src/app/components/navbar/navbar.component.html
+++ b/online-test-front/src/app/components/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar color="primary">
   <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
-    <mat-icon>menu</mat-icon>
+    <mat-icon>menu_book</mat-icon>
   </button>
   <span>Online Test</span>
   <span class="spacer"></span>
