--- a/online-test-front/src/app/pages/login/login.component.html
+++ b/online-test-front/src/app/pages/login/login.component.html
@@ -38,7 +38,7 @@
                   matInput
                   [(ngModel)]="loginData.password"
                   placeholder="Password"
-                  type="text"
+                  type="password"
                   
                   name="password"
                    required
