--- a/online-test-front/src/app/pages/signup/signup.component.html
+++ b/online-test-front/src/app/pages/signup/signup.component.html
@@ -34,7 +34,7 @@
                 <input
                   matInput
                   placeholder="Password"
-                  type="text"
+                  type="password"
                   [(ngModel)]="user.password"
                   name="password"
                    required
