--- a/online-test-front/src/app/pages/admin/dashboard/dashboard.component.html
+++ b/online-test-front/src/app/pages/admin/dashboard/dashboard.component.html
@@ -1,1 +1,13 @@
-<h1 class="text-center text-white">Welcome to Admin Dashboard</h1>
+<div class="container-fluid mt-3">
+    <div class="row">
+        <div class="col-md-3">
+            <app-sidebar></app-sidebar>
+        </div>
+
+        <div class="col-md-9">
+            <mat-card>
+                <router-outlet></router-outlet>
+            </mat-card>
+        </div>
+    </div>
+</div>
