--- a/online-test-front/src/app/pages/admin/sidebar/sidebar.component.html
+++ b/online-test-front/src/app/pages/admin/sidebar/sidebar.component.html
@@ -1,7 +1,26 @@
 <mat-card>
-    <mat-action-list>
-        <div mat-subheader>MENU</div>
-        <button mat-list-item routerLink="/admin"><mat-icon>home</mat-icon> Home</button>
-        <button mat-list-item routerLink="/admin/profile"><mat-icon>account_circle</mat-icon> Profile</button>
-    </mat-action-list>
+  <mat-action-list>
+    <div mat-subheader>MENU</div>
+    <button mat-list-item routerLink="/admin">
+      <mat-icon>home</mat-icon> Home
+    </button>
+    <button mat-list-item routerLink="/admin/profile">
+      <mat-icon>account_circle</mat-icon> Profile
+    </button>
+    <button mat-list-item routerLink="/admin/profile">
+      <mat-icon>category</mat-icon> Categories
+    </button>
+    <button mat-list-item routerLink="/admin/profile">
+      <mat-icon>add_card</mat-icon>Add Categories
+    </button>
+     <button mat-list-item routerLink="/admin/profile">
+      <mat-icon>quiz</mat-icon>Quizzes
+     </button>
+      <button mat-list-item routerLink="/admin/profile">
+      <mat-icon>add</mat-icon>Add Quizzes
+      </button>
+       <button mat-list-item routerLink="/admin/profile">
+      <mat-icon>logout</mat-icon>Logout
+       </button>
+  </mat-action-list>
 </mat-card>
