--- a/online-test-front/src/app/pages/admin/sidebar/sidebar.component.html
+++ b/online-test-front/src/app/pages/admin/sidebar/sidebar.component.html
@@ -7,10 +7,10 @@
     <button mat-list-item routerLink="/admin/profile">
       <mat-icon>account_circle</mat-icon> Profile
     </button>
-    <button mat-list-item routerLink="/admin/profile">
+    <button mat-list-item routerLink="/admin/categories">
       <mat-icon>category</mat-icon> Categories
     </button>
-    <button mat-list-item routerLink="/admin/profile">
+    <button mat-list-item routerLink="/admin/add-category">
       <mat-icon>add_card</mat-icon>Add Categories
     </button>
      <button mat-list-item routerLink="/admin/profile">
