--- a/online-test-front/src/app/pages/admin/sidebar/sidebar.component.html
+++ b/online-test-front/src/app/pages/admin/sidebar/sidebar.component.html
@@ -13,7 +13,7 @@
     <button mat-list-item routerLink="/admin/add-category">
       <mat-icon>add_card</mat-icon>Add Categories
     </button>
-     <button mat-list-item routerLink="/admin/profile">
+     <button mat-list-item routerLink="/admin/quizzes">
       <mat-icon>quiz</mat-icon>Quizzes
      </button>
       <button mat-list-item routerLink="/admin/profile">
