Frontend - Quiz Add & View Done

--- a/online-test-front/src/app/pages/admin/view-quizzes/view-quizzes.component.html
+++ b/online-test-front/src/app/pages/admin/view-quizzes/view-quizzes.component.html
@@ -17,8 +17,9 @@
         <button mat-raised-button color="primary" class="ms-2">Attempts</button>
     </mat-card-actions>
   </mat-card>
-
-  <div class="container text-center mt-3">
-    <button mat-raised-button color="primary">Add New Quiz</button>
+<mat-card>
+   <div class="container text-center">
+    <button mat-raised-button color="primary" routerLink="/admin/add-quiz" >Add New Quiz</button>
   </div>
-
+</mat-card>
+ 
