--- a/online-test-front/src/app/pages/admin/sidebar/sidebar.component.html
+++ b/online-test-front/src/app/pages/admin/sidebar/sidebar.component.html
@@ -16,7 +16,7 @@
      <button mat-list-item routerLink="/admin/quizzes">
       <mat-icon>quiz</mat-icon>Quizzes
      </button>
-      <button mat-list-item routerLink="/admin/profile">
+      <button mat-list-item routerLink="/admin/add-quiz">
       <mat-icon>add</mat-icon>Add Quizzes
       </button>
        <button mat-list-item routerLink="/admin/profile">
