--- a/online-test-front/src/app/pages/admin/view-quizzes/view-quizzes.component.html
+++ b/online-test-front/src/app/pages/admin/view-quizzes/view-quizzes.component.html
@@ -10,7 +10,7 @@
       <p>{{ q.qdescription }}</p>
     </mat-card-content>
     <mat-card-actions>
-        <button mat-raised-button color="accent">Questions</button>
+        <button mat-raised-button [routerLink]="'/admin/view-questions/'+q.qid+'/'+q.qtitle" color="primary">Questions</button>
         <button mat-button  class="ms-2">Max Marks : {{q.max_marks}}</button>
         <button mat-button  class="ms-2">Questions : {{q.number_of_questions}}</button>
         <button [routerLink]="'/admin/quiz/'+q.qid" mat-raised-button color="accent" class="ms-2">Update</button>
