Frontend - Show Quizes To User Added

--- a/online-test-front/src/app/pages/user/user-dashboard/user-dashboard.component.html
+++ b/online-test-front/src/app/pages/user/user-dashboard/user-dashboard.component.html
@@ -1,1 +1,17 @@
-<h1 class="text-center text-white">Welcome to User Dashboard</h1>
+<div class="container-fluid mt-3">
+
+    <div class="row">
+
+        <div class="col-md-3">
+            <user-sidebar></user-sidebar>
+        </div>
+
+        <div class="col-md-9">
+           <router-outlet>
+                
+           </router-outlet>
+        </div>
+
+    </div>
+
+</div>
