Frontend - Test Module Added

--- a/online-test-front/src/app/pages/user/instructions/instructions.component.html
+++ b/online-test-front/src/app/pages/user/instructions/instructions.component.html
@@ -39,7 +39,7 @@
                     </mat-card-content>
                    <mat-divider> </mat-divider>
                     <mat-card-actions class="text-center">
-                        <button mat-raised-button color="primary">Start Test</button>
+                        <button (click)="startQuiz()" mat-raised-button color="primary">Start Test</button>
                     </mat-card-actions>
                 </mat-card>
             </div>
