--- a/online-test-front/src/app/app.component.html
+++ b/online-test-front/src/app/app.component.html
@@ -1,2 +1,12 @@
+<ngx-ui-loader 
+fgsColor="#AA00FF"
+pbColor="#00ACC1"
+text="Please Wait"
+textColor="#00ACC1"
+>
+</ngx-ui-loader>
+
+<div ngxUiLoaderBlurred (blur)="10">
 <online-test-navbar></online-test-navbar>
 <router-outlet></router-outlet>
+</div>
