--- a/online-test-front/src/app/pages/user/start-test/start-test.component.html
+++ b/online-test-front/src/app/pages/user/start-test/start-test.component.html
@@ -69,7 +69,7 @@
         </mat-card-header>
         <mat-card-content>
           <h1> {{timer}} </h1>
-          <mat-spinner color="accent" [value]="(timer / (questions.length * 60 * 2)) * 100" mode="determinate" class="m-auto">
+          <mat-spinner color="accent" [value]="(timer / (questions.length * 30)) * 100" mode="determinate" class="m-auto">
            
           </mat-spinner>
         </mat-card-content>
